# libdbi-drivers

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  README.drivers  README.encodings  README.osx  README.win32  TODO  acinclude.m4  autogen.sh  configure.ac  configure.in  mkinstalldirs
doc/include/: Makefile.am
drivers/: .gitignore  Makefile.am
drivers/db2/: Makefile.am  TODO  dbd_db2.c  dbd_db2.tex
drivers/firebird/: Makefile.am  dbd_firebird.c  utility.c
drivers/freetds/: Makefile.am  dbd_freetds.c
drivers/ingres/: Makefile.am  README  dbd_ingres.c  dbd_ingres.h  dbd_ingres.sgml
drivers/msql/: Makefile.am  dbd_msql.c
drivers/mysql/: AUTHORS  Makefile.am  README  dbd_mysql.c  dbd_mysql.h  dbd_mysql.sgml
drivers/oracle/: Makefile.am  README  TODO  dbd_oracle.c
drivers/pgsql/: Makefile.am  TODO  dbd_pgsql.c  dbd_pgsql.h  dbd_pgsql.sgml
drivers/sqlite/: Makefile.am  dbd_sqlite.c  dbd_sqlite.h  dbd_sqlite.sgml
drivers/sqlite3/: Lindent  Makefile.am  README  dbd_sqlite3.c  dbd_sqlite3.h  dbd_sqlite3.sgml
tests/: .gitignore  Makefile.am  run_tests.sh  test_dbi.c  test_mysql.sh  test_pgsql.sh
tests/cgreen/: Makefile.am
tests/cgreen/src/: cdash_reporter.c  collector.c  constraint.c  memory.c  mocks.c  slurp.c  unit.c  vector.c
tests/cgreen/tests/: cute_reporter_tests.c
